--- a/assets/translations/strings_zh-CN.i18n.json
+++ b/assets/translations/strings_zh-CN.i18n.json
@@ -1,6 +1,6 @@
 {
   "general": {
-    "appTitle": "V2Hiddify",
+    "appTitle": "北极云",
     "reset": "重置",
     "toggle": {
       "enabled": "启用",
